--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    command: sh -c "wait-for-it.sh db:5432 -- uvicorn app.main:app --host 0.0.0.0 --port 8000"
     volumes:
       - .:/app
       - /app/node_modules
