--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     env_file:
       - .env
     environment:
-      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_URL: postgresql+asyncpg://postgres:postgres@db:5432/bowlsacedb
       PYTHONPATH: /app
       PYTHONDONTWRITEBYTECODE: 1
       PYTHONUNBUFFERED: 1
@@ -16,12 +16,10 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    command: sh -c "wait-for-it.sh db:5432 -- uvicorn app.main:app --host 0.0.0.0 --port 8000"
+    command: ./scripts/startup.sh
     volumes:
       - .:/app
       - /app/node_modules
-    networks:
-      - bowlsace_network
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
@@ -37,12 +35,12 @@ services:
           memory: 512M
 
   db:
-    image: postgres:14-alpine
+    image: postgres:14
     container_name: bowlsace_db
     restart: unless-stopped
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: bowlsacedb
       TZ: UTC
       PGDATA: /var/lib/postgresql/data/pgdata
@@ -50,14 +48,13 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    networks:
-      - bowlsace_network
+      - ./docker/postgres:/docker-entrypoint-initdb.d
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d bowlsacedb"]
       interval: 10s
       timeout: 5s
       retries: 5
-      start_period: 10s
+      start_period: 30s
     deploy:
       resources:
         limits:
@@ -66,8 +63,7 @@ services:
           memory: 256M
 
 networks:
-  bowlsace_network:
-    driver: bridge
+  default:
     name: bowlsace_network
 
 volumes:
