--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,6 @@ services:
     env_file:
       - .env
     environment:
-      DATABASE_URL: postgresql+asyncpg://postgres:postgres@db:5432/bowlsacedb
       PYTHONPATH: /app
       PYTHONDONTWRITEBYTECODE: 1
       PYTHONUNBUFFERED: 1
@@ -16,7 +15,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    command: ./scripts/startup.sh
+    command: ["./scripts/wait-for-it.sh", "db:5432", "--", "./scripts/startup.sh"]
     volumes:
       - .:/app
       - /app/node_modules
@@ -38,10 +37,9 @@ services:
     image: postgres:14
     container_name: bowlsace_db
     restart: unless-stopped
+    env_file:
+      - .env
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: bowlsacedb
       TZ: UTC
       PGDATA: /var/lib/postgresql/data/pgdata
     ports:
