--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=123456
 POSTGRES_DB=bowlsacedb
-DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/bowlsacedb
+DATABASE_URL=postgresql+asyncpg://postgres:123456@localhost:5432/bowlsacedb
 SECRET_KEY=your_jwt_secret
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
