Refactor database connection settings and update migration scripts
- Updated database connection URL in alembic.ini and use_sync_connection.py to use psycopg2.
- Modified env.py to simplify the migration connection setup.
- Created new migration scripts for practice_sessions table and merging practice sessions.
- Updated existing migration scripts to correct revision dependencies.
- Added detailed response schemas for practice sessions, drills, and drill groups.
- Refactored practice session retrieval logic to improve efficiency and error handling.
- Removed unused docker-compose.yml file and adjusted run_local.py to use port 8000.

--- a/alembic.ini
+++ b/alembic.ini
@@ -40,7 +40,7 @@ prepend_sys_path = .
 # output_encoding = utf-8
 
 # URL provided by app/core/config.py
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql+psycopg2://bowlsace:supersecret@localhost:5432/bowlsacedb
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
