--- a/alembic.ini
+++ b/alembic.ini
@@ -40,7 +40,7 @@ prepend_sys_path = .
 # output_encoding = utf-8
 
 # URL provided by app/core/config.py
-sqlalchemy.url = postgresql+psycopg2://bowlsace:supersecret@localhost:5432/bowlsacedb
+sqlalchemy.url = postgresql+psycopg2://bowlsace:supersecret@localhost:5432/bcbackend_db
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
