--- a/data/postgres/pgdata/pg_hba.conf
+++ b/data/postgres/pgdata/pg_hba.conf
@@ -91,10 +91,16 @@ local   all             all                                     trust
 host    all             all             127.0.0.1/32            trust
 # IPv6 local connections:
 host    all             all             ::1/128                 trust
+# Specific configuration for bowlsacedb
+local   bowlsacedb      postgres                               trust
+host    bowlsacedb      postgres        127.0.0.1/32           trust
+host    bowlsacedb      postgres        ::1/128                trust
 # Allow replication connections from localhost, by a user with the
 # replication privilege.
-local   replication     all                                     trust
-host    replication     all             127.0.0.1/32            trust
-host    replication     all             ::1/128                 trust
+local   replication     all                                     md5
+host    replication     all             127.0.0.1/32            md5
+host    replication     all             ::1/128                 md5
 
-host all all all scram-sha-256
+# Allow all connections with password authentication
+host    all             all             0.0.0.0/0               md5
+host    all             all             ::/0                    md5
